--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 @font-face {
   font-family: "MYRIADPRO-REGULAR";
   src: url("src/assets/fonts/MYRIADPRO-REGULAR.OTF") format("opentype");
