Update UI responsive

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 @font-face {
   font-family: "MYRIADPRO-REGULAR";
   src: url("src/assets/fonts/MYRIADPRO-REGULAR.OTF") format("opentype");
