--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@
   padding: 0;
 }
 
+button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+
+}
+
 body {
   overflow-x: hidden;
 }
